--- a/home.html
+++ b/home.html
@@ -1006,7 +1006,7 @@
     </script>
 
     <!-- connecting to bundle.js -->
-    <script src="/bundle.js"></script>
+    <script src="/dist/bundle.js"></script>
 </body>
 
 </html>
